<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TeamDetails"
    tools:showIn="@layout/activity_team_details">

    <TextView
        android:id="@+id/txtTeamTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:textSize="36sp"
        tools:text="Team Name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="@dimen/lblDetailsWidth"
            android:layout_height="wrap_content"
            android:text="@string/lblLocation"
            android:textAllCaps="false"
            android:textSize="@dimen/lblDetails" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtDetails" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblVenue"
            android:layout_width="@dimen/lblDetailsWidth"
            android:layout_height="wrap_content"
            android:text="@string/lblVenue"
            android:textAllCaps="false"
            android:textSize="@dimen/lblDetails" />

        <TextView
            android:id="@+id/txtVenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtDetails" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblFirstYear"
            android:layout_width="@dimen/lblDetailsWidth"
            android:layout_height="wrap_content"
            android:text="@string/lblFirstYear"
            android:textAllCaps="false"
            android:textSize="@dimen/lblDetails" />

        <TextView
            android:id="@+id/txtFirstYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtDetails" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblConference"
            android:layout_width="@dimen/lblDetailsWidth"
            android:layout_height="wrap_content"
            android:text="@string/lblConference"
            android:textAllCaps="false"
            android:textSize="@dimen/lblDetails" />

        <TextView
            android:id="@+id/txtConference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtDetails" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDivision"
            android:layout_width="@dimen/lblDetailsWidth"
            android:layout_height="wrap_content"
            android:text="@string/lblDivision"
            android:textAllCaps="false"
            android:textSize="@dimen/lblDetails" />

        <TextView
            android:id="@+id/txtDivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtDetails" />
    </LinearLayout>

</LinearLayout>